--- a/app/src/main/res/layout/navigation_drawer_layout.xml
+++ b/app/src/main/res/layout/navigation_drawer_layout.xml
@@ -17,6 +17,7 @@
         android:layout_width="240dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:listSelector="@drawable/selector_list"
         android:choiceMode="singleChoice"
         android:background="@color/white"/>
 </android.support.v4.widget.DrawerLayout>
