--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
     </style>
 
    <style name="CallToActionButton" >
-       <item name="colorButtonNormal">@color/action_button</item>
+       <item name="colorButtonNormal">@color/button_cta</item>
        <item name="android:textColor">@color/white</item>
        <item name="android:textSize">@dimen/text_medium</item>
        <item name="android:paddingTop">@dimen/padding_small</item>
@@ -17,16 +17,8 @@
     </style>
 
     <style name="WarningCta" >
-        <item name="colorButtonNormal">@color/salmon</item>
+        <item name="colorButtonNormal">@color/button_warning_cta</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">@dimen/text_medium</item>
-        <item name="android:paddingTop">@dimen/padding_small</item>
-        <item name="android:paddingBottom">@dimen/padding_small</item>
-    </style>
-
-    <style name="DisableCTA" >
-        <item name="colorButtonNormal">@color/light_grey</item>
-        <item name="android:textColor">@color/black</item>
         <item name="android:textSize">@dimen/text_medium</item>
         <item name="android:paddingTop">@dimen/padding_small</item>
         <item name="android:paddingBottom">@dimen/padding_small</item>
