--- a/app/src/main/res/layout/activity_service_user_search.xml
+++ b/app/src/main/res/layout/activity_service_user_search.xml
@@ -72,7 +72,7 @@
 
     <TextView
         android:id="@+id/tv_search_results"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/padding_Xsmall"
         android:paddingLeft="@dimen/padding_Xsmall"
