--- a/app/src/main/res/layout/list.xml
+++ b/app/src/main/res/layout/list.xml
@@ -6,5 +6,5 @@
     <ListView
         android:id="@+id/list_dialog"
         android:layout_width="wrap_content"
-        android:layout_height="fill_parent"/>
+        android:layout_height="match_parent"/>
 </LinearLayout>
