--- a/app/src/main/res/layout/activity_appointment_type_spinner.xml
+++ b/app/src/main/res/layout/activity_appointment_type_spinner.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="ie.teamchile.smartapp.activities.AppointmentTypeSpinnerActivity" >
+    tools:context=".activities.AppointmentTypeSpinner.AppointmentTypeSpinnerActivity" >
 
     <TextView
         android:id="@+id/tv_appointment_type"
