update MidwiferyLog to MVP

--- a/app/src/main/res/layout/activity_midwifery_log.xml
+++ b/app/src/main/res/layout/activity_midwifery_log.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="ie.teamchile.smartapp.activities.MidwiferyLogActivity">
+    tools:context=".activities.MidwiferyLog.MidwiferyLogActivity">
 
     <ListView
         android:id="@+id/lv_midwifery_log"
