--- a/app/src/main/res/layout/activity_clinic_time_record.xml
+++ b/app/src/main/res/layout/activity_clinic_time_record.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="ie.teamchile.smartapp.activities.ClinicTimeRecordActivity">
+    tools:context=".activities.ClinicTimeRecord.ClinicTimeRecordActivity">
 
         <TextView
             android:layout_width="match_parent"
