--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -98,7 +98,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1.0"
-            android:text="@string/login"
+            android:text="@string/responseLogin"
             android:theme="@style/CallToActionButton"/>
 
     </LinearLayout>
